--- a/src/rails/mobmke-site/Gemfile
+++ b/src/rails/mobmke-site/Gemfile
@@ -3,6 +3,11 @@ source 'https://rubygems.org'
 gem 'rails', '3.2.8'
 gem 'devise'
 
+group :development do
+	gem 'nifty-generators'
+end
+
+
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
