--- a/src/rails/mobmke-site/Gemfile
+++ b/src/rails/mobmke-site/Gemfile
@@ -5,6 +5,7 @@ gem 'devise'
 gem 'cancan'
 
 group :development do
+	gem 'sqlite3'
 	gem 'nifty-generators'
 end
 
@@ -12,7 +13,7 @@ end
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
+gem 'pg'
 
 
 # Gems used only for assets and not required
